[project]
name = "test_project_template"
version = "1.0.0"
description = ""
authors = [
    { name = "Dias Bakhtiyarov", email = "dbakhtiyarov@nu.edu.kz" },
]
dependencies = [
    "python-box>=5.4.1",
    "boltons>=21.0.0",
    "more-itertools>=8.12.0",
    "numpy>=1.22.2",
    "pandas>=1.4.1",
    "typer[all]>=0.4.0",
    "plum-dispatch>=1.5.8",
    "loguru>=0.6.0",
    "httpx>=0.22.0",
]
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
