[tool.poetry]
name = "solai_sim"
version = "0.1.0"
description = ""
authors = ["lgblkb <dbakhtiyarov@nu.edu.kz>"]
repository = "git@github.com:lgblkb/solai_sim.git"

[tool.poetry.dependencies]
python = "~3.8"

toml = "*"
asteval = "*"
boltons = "*"
click = "*"
more-itertools = "^8.10.0"
python-box = "*"
pyyaml = "*"
tomlkit = "*"
jinja2 = "*"
watchdog = "*"
argh = "*"
docker = "*"
ansible = "*"
fire = "*"
omegaconf = "*"
python-dotenv = "*"
plum-dispatch = "*"
docker-compose = "*"
mkdocs = "^1.2.3"
mkdocstrings = "^0.16.2"
pandas = "^1.3.4"
numpy = "^1.21.3"
simpy = "^4.0.1"
ujson = "^4.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"